fixed cards box shadow overflow: visible;

--- a/style/style.scss
+++ b/style/style.scss
@@ -368,7 +368,6 @@ i.secondary-page-heart {
 
 .dish-cards {
     background-color: $secondary-color;
-    overflow: hidden;
 }
 
 .fonctionnement-card-content.sec {
@@ -399,7 +398,6 @@ i.secondary-page-heart {
     border-top-right-radius: 20px;
     background-color: $secondary-color;
     position: relative;
-    bottom: 15px;
     overflow: hidden;
 }
 
@@ -413,7 +411,7 @@ i.secondary-page-heart {
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     border-radius: 20px;
     margin-bottom: 25px;
-    height: 75px;
+    height: 80px;
     background-color: $primary-color;
     width: 100%;
     overflow: hidden;
@@ -487,6 +485,7 @@ footer {
     font-family: Roboto;
     font-size: 16px;
     font-weight: 500;
+    margin-top: 0px;
 }
 
 .footer-title {
@@ -503,7 +502,7 @@ footer {
 }
 
 .with-icon {
-    padding-left: 13px;
+    padding-left: 10px;
     background-color: #353535;
 }
 
@@ -595,7 +594,6 @@ footer {
 
 .fonctionnement-cards.dish-cards {
     flex-direction: column;
-    overflow: hidden;
 }
 
 // FOOTER
@@ -614,7 +612,6 @@ footer {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        gap: 10px;
     }
 
 // big devices over 1441px
